added second card

--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
         </p>
       </div>
     </div>
+
+    <!-- the middle card -->
+
+    <div class="card shadow-sm rounded" style="width: 20rem">
+      <div class="card-img-top"></div>
+      <img
+        src="./images/project1pic.PNG"
+        class="card-img-top"
+        height="300"
+        alt="..."
+      />
+      <div className="card-body">
+        <h5 className="card-title">Lyrics You Now Know</h5>
+        <a
+          target="__blank"
+          href="https://github.com/ralph626/Project-1-Team-5"
+          class="btn btn-primary"
+        >
+          Visit this Repo
+        </a>
+        <p class="card-text">
+          I am an aspiring full-stack developer. Eager to work hard and learn as
+          much as possible.
+        </p>
+      </div>
+    </div>
   </body>
   <!-- javascript link -->
   <link rel="stylesheet" href="script.js" />
