add a third card

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         height="300"
         alt="..."
       />
-      <div className="card-body">
-        <h5 className="card-title">ParcIt Homepage</h5>
+      <div class="card-body">
+        <h5 class="card-title">ParcIt Homepage</h5>
         <a
           target="__blank"
           href="https://github.com/ralph626"
@@ -52,8 +52,8 @@
         height="300"
         alt="..."
       />
-      <div className="card-body">
-        <h5 className="card-title">Lyrics You Now Know</h5>
+      <div class="card-body">
+        <h5 class="card-title">Lyrics You Now Know</h5>
         <a
           target="__blank"
           href="https://github.com/ralph626/Project-1-Team-5"
@@ -64,6 +64,33 @@
         <p class="card-text">
           I am an aspiring full-stack developer. Eager to work hard and learn as
           much as possible.
+        </p>
+      </div>
+    </div>
+
+    <!-- the right card -->
+
+    <div class="card shadow-sm rounded" style="width: 20rem">
+      <div class="card-img-top"></div>
+      <img
+        src="./images/linkedInMainPage.PNG"
+        class="card-img-top"
+        height="300"
+        alt="..."
+      />
+      <div class="card-body">
+        <h5 class="card-title">My LinkedIn</h5>
+        <a
+          target="__blank"
+          href="https://www.linkedin.com/in/ralph-orozco-0852721b0/"
+          class="btn btn-primary"
+        >
+          Visit this Repo
+        </a>
+        <p class="card-text">
+          I am excited to work in the industry, I enjoy emerging myself in the
+          field and to continue learning new ways of creating applications of
+          all kind.
         </p>
       </div>
     </div>
